src/test/deca/syntax/valid/exemple_sans_objet_02.deca
// Description:
//    Programme pour afficher x².
//
// Resultats:
//      x²
// Historique:
//    cree le 04/01/2023
{
   int x ;
   x=readInt() ;
   println(0.5*(x*x*(1*2))) ;
}